--- a/Chapitre 6 - Flask et introduction au SQL en Python.ipynb
+++ b/Chapitre 6 - Flask et introduction au SQL en Python.ipynb
@@ -79,32 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 'Hippana', 'Ancient settlement in the western part of Sicily, probably founded in the seventh century B.C.', 37.7018, 13.4358, 'settlement')\n",
-      "(2, 'Nicomedia', 'Nicomedia was founded in 712/11 BC as a Megarian colony named Astacus and was rebuilt by Nicomedes I of Bithynia in 264 BC. The city was an important administrative center of the Roman Empire.', 40.7652, 29.9199, 'settlement')\n",
-      "(3, 'Aornos', \"Aornos was a mountain fortress and the site of Alexander the Great's last siege during the winter of 327-6 BC. The ancient site likely corresponds to ??a, a peak on the P?r-Sar west of the Indus river.\", 34.7526, 72.8035, 'settlement')\n",
-      "(4, 'The \"Hochtor Sanctuary\"', 'A Celto-Roman sanctuary situated at an ancient high-mountain pass in the eastern Alps near Grossglockner, excavated beginning in the 1990s. Its ancient name is unknown.', 47.0818, 12.8426, 'sanctuary')\n",
-      "(5, 'Lipara (settlement)', 'A Greek colony and long-time settlement on the island of the same name, located to the north of Sicily in the Tyrrhenian Sea. Modern Lipari.', 38.4674, 14.954, 'settlement')\n",
-      "(6, 'Arch of Constantine', 'The Arch of Constantine at Rome, a triumphal arch dedicated in A.D. 315.', 41.8899, 12.4905, 'arch')\n",
-      "(7, 'Taberna Pomaria di Felix', \"A fruit shop in Pompeii (I, 8, 1) with an entrance on to the Via dell'Abbondanza.\", 40.7507, 14.49, 'taberna-shop')\n",
-      "(8, 'S. Paulus', \"One of Rome's four major papal basilicae, S. Paulus was founded by Constantine I in the early fourth century A.D. and expanded by Valentinian I in the 370s.\", 41.8587, 12.4768, 'church')\n",
-      "(9, 'Calleva', 'Calleva Atrebatum (known as Silchester Roman Town) was an Iron Age oppidum and Roman town in  Britannia. It was the civitas capital of the Atrebates tribe.', 51.3555, -1.09152, 'settlement')\n",
-      "(10, 'Colophon/Colophon ad Mare/Notion', 'A port city founded by Aeolian settlers at the mouth of the River Avci.', 37.9928, 27.1975, 'settlement')\n",
-      "(11, 'Bousiris', 'Bousiris was a city of Lower Egypt near the Phatnitic mouth of the Nile river and was considered one of the possible birthplaces of Osiris.', 30.9134, 31.2388, 'settlement')\n",
-      "(12, 'Corinthia', 'Corinthia was a region of ancient Greece associated with the city-state Corinth.', 37.7986, 22.8344, 'region')\n",
-      "(13, 'Garumna (river)', 'The Garonne river is a river of southwestern Gaul and northern Iberia.', 44.81, -0.318455, 'river')\n",
-      "(14, 'Caelius Mons', 'The Caelian Hill in Rome.', 41.8876, 12.4913, 'hill')\n",
-      "(15, 'Prinias (Patela)', \"An Iron Age settlement on the Patela plateau north of the modern village of Prinias; its ancient name is uncertain. The site is notable for its occupation from the end of the Bronze Age through to the Archaic period, as well as for the monumental architecture and Orientalizing sculpture of its Buildings ('Temples') A and B. \", 35.1686, 25.0009, 'settlement')\n",
-      "<class 'tuple'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import MySQLdb\n",
     "db = MySQLdb.connect(\n",
@@ -188,18 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thibault/dev/cours-python/env/lib/python3.5/site-packages/flask_sqlalchemy/__init__.py:794: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
-      "  'SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from flask import Flask\n",
     "from flask_sqlalchemy import SQLAlchemy\n",
@@ -222,23 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<sqlalchemy.engine.result.ResultProxy object at 0x7f7bb8fd9588>\n",
-      "Hippana\n",
-      "<class 'sqlalchemy.engine.result.RowProxy'>\n",
-      "Nicomedia\n",
-      "<class 'sqlalchemy.engine.result.RowProxy'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = db.engine.execute(\"SELECT * FROM place\")\n",
     "print(query)\n",
@@ -299,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,17 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Place 1>, <Place 2>, <Place 3>, <Place 4>, <Place 5>, <Place 6>, <Place 7>, <Place 8>, <Place 9>, <Place 10>, <Place 11>, <Place 12>, <Place 13>, <Place 14>, <Place 15>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lieux = Place.query.all()\n",
     "print(lieux)"
@@ -371,31 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hippana settlement\n",
-      "Nicomedia settlement\n",
-      "Aornos settlement\n",
-      "The \"Hochtor Sanctuary\" sanctuary\n",
-      "Lipara (settlement) settlement\n",
-      "Arch of Constantine arch\n",
-      "Taberna Pomaria di Felix taberna-shop\n",
-      "S. Paulus church\n",
-      "Calleva settlement\n",
-      "Colophon/Colophon ad Mare/Notion settlement\n",
-      "Bousiris settlement\n",
-      "Corinthia region\n",
-      "Garumna (river) river\n",
-      "Caelius Mons hill\n",
-      "Prinias (Patela) settlement\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for lieu in lieux:\n",
     "    print(lieu.place_nom, lieu.place_type)"
@@ -412,17 +338,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lipara (settlement)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cinq = Place.query.get(5)\n",
     "print(cinq.place_nom)"
@@ -439,28 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Place 1>, <Place 2>, <Place 3>, <Place 5>, <Place 9>, <Place 10>, <Place 11>, <Place 15>]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "len() takes no keyword arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-c7aaf1365905>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msettlements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplace_type\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"settlement\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msettlements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msettlements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplace_type\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"settlement\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: len() takes no keyword arguments"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "settlements = Place.query.filter(Place.place_type==\"settlement\").all()\n",
     "print(settlements)"
@@ -477,17 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "settlements = Place.query.filter(Place.place_type==\"settlement\").count()\n",
     "print(settlements)"
@@ -508,6 +399,7 @@
     "Quand on réalise une requête de type `Place.query.filter(Place.place_type==\"settlement\")`, Flask SQL Alchemy va commencer à construire la requête suivante : `SELECT * FROM Place WHERE place_type=\"settlement\"`. Puis, :\n",
     "- en faisant `.all()` ensuite, il va récupérer l'ensemble des résultats tels quels\n",
     "- en faisant `.count()`, il va modifier la requête en `SELECT COUNT(*) FROM Place where place_type=\"settlement\"` puis l'exécuter\n",
+    "- en faisant `.first()`, on récupèrera le premier résultat (et donc on éviter une liste)\n",
     "\n",
     "La requête est donc traduite et augmentée au fur et à mesure que nous enchaînons les méthodes.\n",
     "\n",
@@ -517,27 +409,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Place 15>, <Place 2>, <Place 5>, <Place 1>, <Place 10>, <Place 9>, <Place 11>, <Place 3>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "settlements = Place.query.filter(Place.place_type==\"settlement\").order_by(Place.place_nom.desc()).all()\n",
-    "print(settlements)"
+    "print(settlements)\n",
+    "\n",
+    "# En SQL :\n",
+    "requete = \"\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Des requêtes à leur utilisation dans une page web"
+    "### Des requêtes à leur utilisation dans une page web\n",
+    "\n",
+    "Maintenant que nous avons notre modèle, nous pouvons commencer à intégrer ces requêtes. Nous avions jusque là une page index qui affichait l'ensemble des liens de la base de données. Nous allons donc d'abord configurer comme ci-dessus Flask SQL Alchemy :\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "from flask import Flask, render_template\n",
+    "from flask_sqlalchemy import SQLAlchemy\n",
+    "\n",
+    "app = Flask(\"Application\")\n",
+    "# On configure la base de données\n",
+    "app.config['SQLALCHEMY_DATABASE_URI'] = 'mysql://gazetteer_user:password@localhost/gazetteer'\n",
+    "# On initie l'extension\n",
+    "db = SQLAlchemy(app)\n",
+    "```\n",
+    "\n",
+    "On copiera ensuite le modèle de données :\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "class Place(db.Model):\n",
+    "    place_id = db.Column(db.Integer, unique=True, nullable=False, primary_key=True, autoincrement=True)\n",
+    "    place_nom = db.Column(db.Text)\n",
+    "    place_description = db.Column(db.Text)\n",
+    "    place_longitude = db.Column(db.Float)\n",
+    "    place_latitude = db.Column(db.Float)\n",
+    "    place_type = db.Column(db.String(45))\n",
+    "```\n",
+    "\n",
+    "Puis on récupère les données au moment de l'exécution des routes :\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def accueil():\n",
+    "    # On a bien sûr aussi modifié le template pour refléter le changement\n",
+    "    lieux = Place.query.all()\n",
+    "    return render_template(\"pages/accueil.html\", nom=\"Gazetteer\", lieux=lieux)\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercice\n",
+    "\n",
+    "**Avant de regarder l'exemple ci-dessous**, essayez de modifier la route ci-dessous afin qu'elle utilise la connexion à la base de données :\n",
+    "\n",
+    "```python\n",
+    "@app.route(\"/place/<int:place_id>\")\n",
+    "def lieu(place_id):\n",
+    "    return render_template(\"pages/place.html\", nom=\"Gazetteer\", lieu=lieux[place_id])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Votre code ici :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exemple 11\n",
+    "\n",
+    "- [Nouveau template pour l'accueil](cours-flask/exemple11/templates/pages/accueil.html)\n",
+    "- [Nouveau template pour les lieux](cours-flask/exemple11/templates/pages/place.html)\n",
+    "\n",
+    "Dans votre terminal, avec votre environnement virtuel :\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple11\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
+    "puis allez sur http://127.0.0.1:5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raccourci pour afficher le contenu de l'exemple\n",
+    "%pycat cours-flask/exemple11/app.py"
    ]
   }
  ],
