Clean up and fix for issue #4

--- a/Exercice dictionnaires, listes et boucles.ipynb
+++ b/Exercice dictionnaires, listes et boucles.ipynb
@@ -276,7 +276,7 @@
     "# Consigne\n",
     "debut_texte = None\n",
     "print(debut_texte)\n",
-    "assert texte.startswith(\"Comment donner une place aux\") == 0.06, \"Mauvaise clé !\""
+    "assert texte.startswith(\"Comment donner une place aux\") == True, \"Mauvaise clé !\""
    ]
   },
   {
