Import relatif. Prévision de Blueprint pour pouvoir gérer

--- a/Chapitre 7 - Du script a l'application - module et gestion des erreurs.ipynb
+++ b/Chapitre 7 - Du script a l'application - module et gestion des erreurs.ipynb
@@ -318,7 +318,146 @@
    "source": [
     "### De module à module : l'import relatif\n",
     "\n",
+    "Nous avons pour l'instant fait des imports uniquement depuis l'extérieur du package vers ce package. Il est cependant possible de faire ces imports de manière relative et il est d'ailleurs conseillé de le faire dans le cadre d'une application web.\n",
+    "\n",
+    "Ces imports fonctionnent alors exactement comme les imports précédent mais en utilisant la syntaxe des chemins relatifs `..` et `.` où :\n",
+    "\n",
+    "- `.` représente le dossier courrant\n",
+    "- `..` représente le dossier parent\n",
+    "- `...` représente le dossier grand-parent\n",
+    "- etc.\n",
+    "\n",
+    "Ainsi, dans le cadre de nos modèles par exemple, il serait souhaitable de pouvoir diviser nos ressources entre les données utilisateurs et les données scientifiques pour se retrouver plus facilement dans les fichiers. Cela donnerait : \n",
+    "\n",
+    "```\n",
+    "gazetteer/\n",
+    "   |- __init__.py\n",
+    "   |- application.py\n",
+    "   |- modeles/\n",
+    "       |- __init__.py\n",
+    "       |- donnees.py\n",
+    "       |- utilisateurs.py\n",
+    "run.py\n",
+    "```\n",
+    "\n",
+    "Si l'on a besoin d'une information d'application depuis `modeles.donnees`, on importera l'information via :\n",
+    "\n",
+    "```python\n",
+    "from ..application import nom_dapplication\n",
+    "```\n",
+    "\n",
+    "Si au contraire, on recherche une information liée à l'utilisateur, on écrira \n",
+    "\n",
+    "```python\n",
+    "from .utilisateurs import mon_utilisateur\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raccourci pour afficher le contenu de l'exemple\n",
+    "%pycat cours-packages/exemple-03/gazetteer/application.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raccourci pour afficher le contenu de l'exemple\n",
+    "%pycat cours-packages/exemple-03/gazetteer/modeles/utilisateurs.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raccourci pour afficher le contenu de l'exemple\n",
+    "%pycat cours-packages/exemple-03/gazetteer/modeles/donnees.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Et on importe simplement la fonction dans `gazetteer.modeles.donnees` depuis `run.py` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raccourci pour afficher le contenu de l'exemple\n",
+    "%pycat cours-packages/exemple-03/run.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Et le résultat de son appel sera :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thibault utilise Gazetteer\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cette commande permet de lancer le script directement depuis ce module\n",
+    "! cd cours-packages/exemple-03 && python run.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pour lancer l'exemple en terminal\n",
+    "\n",
+    "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
+    "\n",
+    "```sh\n",
+    "cd cours-pages/exemple-02\n",
+    "python run2.py\n",
+    "```\n",
+    "\n",
+    "#### Résumé d'un packages avec plusieurs modules\n",
+    "\n",
+    "- Un package peut avoir des sous-modules\n",
+    "- Les imports relatifs se font à l'aide des `.` :\n",
+    "    - `.` représente le dossier courrant\n",
+    "    - `..` représente le dossier parent\n",
+    "    - `...` représente le dossier grand-parent\n",
+    "    - etc.\n",
+    "- Depuis l'extérieur du package, on utilise l'import absolu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Notre application en packages\n",
+    "\n",
+    "#### Cela ne marche pas parce que...\n",
+    "\n",
+    "### Les Blueprints : des applications dans l'application\n",
     "\n",
     "## Les erreurs\n",
     "\n",
@@ -339,7 +478,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -350,5 +489,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
