Presque toutes les erreurs pour chapitre 7

--- a/Chapitre 7 - Du script a l'application - module et gestion des erreurs.ipynb
+++ b/Chapitre 7 - Du script a l'application - module et gestion des erreurs.ipynb
@@ -455,17 +455,226 @@
    "source": [
     "### Notre application en packages\n",
     "\n",
-    "#### Cela ne marche pas parce que...\n",
+    "Vous imaginez bien que si l'on peut diviser, il est recommandable de le faire. Et pour le faire, il vaut mieux pouvoir découper au mieux ce que vous pouvez faire. On recommande en général de découper :\n",
     "\n",
-    "### Les Blueprints : des applications dans l'application\n",
+    "1. Les modèles de données (et si possible les différents modèles de données : modèles scientifiques et modèles utilisateurs)\n",
+    "2. Les routes\n",
+    "3. La création de l'application\n",
     "\n",
+    "Regardez un peu le dossier `cours-packages/exemple-04`\n",
+    "\n",
+    "\n",
+    "#### Pour lancer l'exemple en terminal\n",
+    "\n",
+    "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
+    "\n",
+    "```sh\n",
+    "cd cours-pages/exemple-04\n",
+    "python run.py\n",
+    "```\n",
+    "\n",
+    "#### Un petit bug ?\n",
+    "\n",
+    "On nous annonce un problème avec les templates. Pour résoudre le problème, on spécifie le dossier ! En effet, `Flask()` prend deux paramètres nommés `templates` et `static` ! :\n",
+    "\n",
+    "```python\n",
+    "app = Flask(\"Nom\", template_folder=\"templates\", static_folder=\"static\") # Valeur par défaut ici\n",
+    "```\n",
+    "\n",
+    "Mais en python, les dossiers relatifs sont pris depuis le fichier qui est exécuté. Hors, on exécute `run.py` et non `app.py`. Il faudrait donc écrire `./gazetteer/templates/` et `./gazetteer/static`. Mais si on change encore !\n",
+    "\n",
+    "La technique vise à obtenir, via python, le chemin actuel de l'application. Il suffit pour cela d'exécuter le code suivant :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/thibault/dev/cours-python/cours-flask/exemple12\n",
+      "/home/thibault/dev/cours-python/cours-flask/exemple12/gazetteer/templates\n"
+     ]
+    }
+   ],
+   "source": [
+    "% pycat cours-flask/exemple12/path.py\n",
+    "% run cours-flask/exemple12/path.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Découpons le code !\n",
+    "\n",
+    "\n",
+    "- `import os` : on importe un package `os` permettant de faire des opérations liées au système\n",
+    "- `os.path.dirname()` : on récupère le nom de dossier du résultat de \n",
+    "    - `os.path.abspath(__file__)` qui récupère le chemin absolu du dossier du fichier qui comprend ce code\n",
+    "        - **Attention:** `__file__` n'existe pas dans Jupyter Notebook\n",
+    "- `os.path.join()` permet de réaliser la jointure du chaîne avec les caractères de chemin de l'OS exécutant:\n",
+    "    - Sur Windows, il choisira `\\`\n",
+    "    - Sur Linux et Mac, il choisira `/`\n",
+    "    \n",
+    "    \n",
+    "#### Pour lancer l'exemple en terminal\n",
+    "\n",
+    "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple12\n",
+    "python run.py\n",
+    "```\n",
+    "\n",
+    "#### Attention !\n",
+    "\n",
+    "On fera attention à importer les routes en fin de création d'application, sinon on aura une belle boucle d'import : \n",
+    "\n",
+    "1. `gazetteer.app` importe `gazetteer.routes` ligne 3\n",
+    "2. `gazetteer.routes` importe `gazetteer.app` ligne 2\n",
+    "3. `gazetteer.app` importe `gazetteer.routes` ligne 3\n",
+    "4. `gazetteer.routes` importe `gazetteer.app` ligne 2\n",
+    "5. `gazetteer.app` importe `gazetteer.routes` ligne 3\n",
+    "6. `gazetteer.routes` importe `gazetteer.app` ligne 2\n",
+    "7. *etc.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Les erreurs\n",
     "\n",
+    "On a souvent rencontré des erreurs. Et on en a même provoquées volontairement, par exemple, si on tentait de diviser d'obtenir un élément inexistant :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-70a5ac505fb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mliste\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mliste\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [0,1,2]\n",
+    "liste[3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Que faire quand on a une erreur\n",
     "\n",
-    "### Que faire quand on rencontre CETTE erreur\n",
+    "On peut éviter ignorer les erreurs en imbriquant un code dans un double bloc `try except` qui s'écrit comme un `if else` sauf que : \n",
+    "- le bloc `except` est obligatoire si un `try` est ouvert\n",
+    "- le bloc `except` n'est executé que si une erreur apparaît"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Je me suis trompé !\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(liste[3])\n",
+    "except:\n",
+    "    print(\"Je me suis trompé !\")\n",
+    "    print(liste[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Que faire quand on veut gérer une erreur spécifique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Récupérer l'erreur et la relancer\n",
     "\n",
-    "### Gestion des erreurs : afficher une page d'erreur quand un lieu n'existe pas"
+    "Il peut être intéressant de récupérer l'erreur et de la relance : imaginons que nous avons un bloc de gestion de données et qu'une erreur arrive après avoir déjà traîté un gros nombre de données. On pourrait alors sauvegarder ce que l'on a, puis lancer l'erreur pour faire du debuggage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Je me suis trompé !\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-61108c1cc242>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Je me suis trompé !\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-61108c1cc242>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mliste\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Je me suis trompé !\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(liste[3])\n",
+    "except Exception as ma_variable_erreur:\n",
+    "    print(\"Je me suis trompé !\")\n",
+    "    raise ma_variable_erreur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lecture de code :\n",
+    "\n",
+    "- On ajoute Exception qui permet de cibler toutes les erreurs. Cela pourrait être une erreur spécifique\n",
+    "    - On stocke cette erreur via `as nom_de_variable`\n",
+    "- On fait toutes les opérations que l'on veut\n",
+    "- On utilise ensuite `raise` avec l'erreur à lancer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice\n",
+    "\n",
+    "Gestion des erreurs : afficher une page d'erreur quand un lieu n'existe pas"
    ]
   }
  ],
@@ -478,7 +687,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -489,5 +698,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
